# bus-tracker-app

./: .gitignore  package.json
backend/: .gitignore  Dockerfile  pyproject.toml  pytest.ini
backend/backend/: config.py  database.py  main.py
backend/backend/models/: hotspot.py  object_id.py  reservation.py  routes.py  token.py  user.py  vehicle.py
backend/backend/routers/: auth.py  hotspots.py  license_detection.py  reservations.py  routes.py  statistics.py  users.py  vehicles.py  websocket.py
backend/backend/schemas/: auth.py
backend/backend/services/: auth.py  license_detection.py  routes.py  users.py  vehicles.py
backend/backend/utils/: auth.py  auth_scheme.py  db_util.py  gps.py  pagination.py  validate_object_id.py
backend/models/YOLOv8/: direction_module.py  image_processing.py  license_plate_formats.py  main.py  test.csv  util.py  util_new.py  visualize.py
backend/models/license/: train.py
backend/scripts/: db-setup.sh
backend/seed/: bank_details.py  chatrooms.py  order_resolutions.py  order_review.py  orders.py  payments.py  payouts.py  services.py  sessions.py  stripe.py  trial_sessions.py  tutors.py  users.py  utils.py
frontend/: .env.override  .gitignore  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1707493313779-b385e8ecff0b1.mjs
frontend/src/: app.html  app.pcss  hooks.server.js
frontend/src/lib/api/: api.ts
frontend/src/routes/: +layout.server.js  +layout.svelte  +page.server.js  +page.svelte
src/routes/: +page.svelte
(+251 files in other folders)
