[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Tahmid Sharif <tahmidsharif619@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pip = "^23.3.1"
pydantic-settings = "^2.0.3"
bcrypt = "^4.0.1"
pyjwt = "^2.8.0"
python-dotenv = "^1.0.0"
pydantic = {extras = ["email"], version = "^2.4.2"}
python-multipart = "^0.0.6"
sendgrid = "^6.11.0"
psycopg2-binary = "^2.9.9"
passlib = "1.7.4"
websocket = "^0.2.1"
ruff = "^0.4.1"
boto3 = "^1.24.20"
docker = "^7.1.0"
faker = "^26.0.0"
pytest = "^8.3.2"
httpx = "^0.27.0"
isort = "^5.13.2"

flask = "^3.0.3"
nanoid = "^2.0.0"
stripe = "^10.10.0"
opencv-python = "4.7.0.72"
pymongo = "^4.10.1"
ultralytics = "8.0.114"
pandas = "2.0.2"
numpy = "1.26.3"
scipy = "1.14.1"
easyocr = "1.7.0"
filterpy = "1.4.5"
paddlepaddle = "^2.6.2"
paddleocr = "^2.9.1"
python-jose = "^3.3.0"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core", "ruff"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
exclude = ["build", "dist", "venv"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]
ignore = ["E501"]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]


[tool.poetry.scripts]
start = "backend.main:start"